--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <!-- Other CSS Framework End -->
 
     <!-- Preload Style.css -->
-    <link href="https://template.hxco.de/style.min.css" rel="preload" as="style">
-    <link href="https://template.hxco.de/style.min.css" rel="stylesheet">
+    <link href="https://template.hxco.org/style.min.css" rel="preload" as="style">
+    <link href="https://template.hxco.org/style.min.css" rel="stylesheet">
 
     <!-- Import Icon -->
     <link rel="icon" href="https://template.hxco.de/elements/target.png">
